--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,7 @@
 # Ignore system directories
-Application Data/
-Cookies/
-Local Settings/
-My Documents/
-NetHood/
-PrintHood/
-Recent/
-SendTo/
-Start Menu/
-Templates/
-
-# Ignore specific files
+.VirtualBox/
+.android/
+.arduinoIDE/
 .bash_history
 .dotnet/
 .gitconfig
@@ -23,3 +14,38 @@ Templates/
 .platformio/
 .ssh/
 .vscode/
+3D Objects/
+AppData/
+Contacts/
+Documents/
+Downloads/
+Dropbox/
+Favorites/
+IntelGraphicsProfiles/
+Links/
+Music/
+NTUSER.DAT
+NTUSER.DAT{85cc9639-e213-11ed-8b0a-cbc7ae1c6d6b}.TM.blf
+NTUSER.DAT{85cc9639-e213-11ed-8b0a-cbc7ae1c6d6b}.TMContainer00000000000000000001.regtrans-ms
+NTUSER.DAT{85cc9639-e213-11ed-8b0a-cbc7ae1c6d6b}.TMContainer00000000000000000002.regtrans-ms
+849C9593-D756-4E56-8D6E-42412F2A707B
+RECURSION.ipynb
+Saved Games/
+Searches/
+TEST.ipynb
+Untitled.ipynb
+Untitled1-Copy1.ipynb
+Viasfora/
+Videos/
+VirtualBox VMs/
+__pycache__/
+airthmatic.py
+doxygen/
+ntuser.dat.LOG1
+ntuser.dat.LOG2
+ntuser.ini
+source/
+trees.c
+
+# Ignore specific files
+desktop.ini
